--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^5.8.9",
     "@react-navigation/stack": "^5.12.6",
     "expo": "~39.0.2",
+    "expo-secure-store": "^9.2.0",
     "expo-status-bar": "~1.0.2",
     "firebase": "^8.0.2",
     "react": "16.13.1",
